--- a/EstudiantesApp.csproj
+++ b/EstudiantesApp.csproj
@@ -46,10 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EstudiantesBDDataSet.cs">
+      <DependentUpon>EstudiantesBDDataSet.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="EstudiantesBDDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>EstudiantesBDDataSet.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -73,14 +78,17 @@
     </Compile>
     <None Include="EstudiantesBDDataSet.xsc">
       <DependentUpon>EstudiantesBDDataSet.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="EstudiantesBDDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>EstudiantesBDDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="EstudiantesBDDataSet.xss">
       <DependentUpon>EstudiantesBDDataSet.xsd</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
